kubernetes/backend_service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: backend
  name: backend-service
  namespace: mlsc-test
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: backend
status:
  loadBalancer: {}
