kubernetes/frontend_service.yml

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: frontend
  name: frontend-service
  namespace: mlsc-test
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: frontend
status:
  loadBalancer: {}
