kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: mp-ingress
  namespace: mlsc-test
spec:
  rules:
    - host: kubernetes.docker.internal
      http:
       paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 3000
        
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 8000
